--- a/myunsplash/templates/index.html
+++ b/myunsplash/templates/index.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+{%extends 'base.html'%}
+
+{% block content %}
+{{block.super}}
+<div class="row">
+    {% for one in images %}
+        <div class="col-md-4 ml-3" style="width:12rem;">
+            <img class="card-img-top" style="height: 20rem;" src="{{one.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5 class="card-title">{{one.Name}}</h5>
+                    </div>
+                    <div class="col-md-6">
+                        <h5 class="card-title">{{one.category}}</h5>
+                    </div>
+                </div>
+                <p class="card-text">{{one.Description}}</p>
+            </div>
+        </div>
+    {%endfor%}
+</div>
+
+{% endblock %}
