--- a/myunsplash/templates/Image/single-image.html
+++ b/myunsplash/templates/Image/single-image.html
@@ -1,12 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    {% if title %}
-    <title> My-Unsplash </title>
+{% extends 'base.html' %}
+{% block content %}
+{% for image in images %}
 
-</body>
-</html>
+<a data-toggle="modal" data-target="#myModal{{image.id}}"><img src="{{image.image.url}}" style="margin-left: 200px;margin-top: 50px;" width="900" height="500"
+        alt="aaa"></a>
+
+{% endfor %}
+{% for image in images %}
+<!-- Modal -->
+<div class="modal fade" id="myModal{{image.id}}" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Copy image</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+            </div>
+            <div class="modal-body">
+                <p>
+                    <h1>name:{{image.Name}}</h1>
+                </p>
+                <img src="{{image.image.url}}" width="450" height="400">
+                <p>
+                    <h3>Category:{{image.category}}</h3>
+                    <h3>Description:{{image.Description}}</h3>
+                </p>
+            </div>
+            <form class="form-control">
+                <input type="text" class="form-control" id="url" value='http://127.0.0.1:8000{{image.image.url}}'>
+                <button class="btn btn-succrss" onclick='copy()'>COPY URL</button>
+            </form>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<script>
+    function copy() {
+        /* Get the text field */
+        var copyText = document.getElementById("url");
+        /* Select the text field */
+        copyText.select();
+        /* Copy the text inside the text field */
+        document.execCommand("copy");
+        /* Alert the copied text */
+        alert("Copied the text: " + copyText.value);
+    }
+</script>
+{% endfor %}
+{% endblock %}
