--- a/myunsplash/templates/index.html
+++ b/myunsplash/templates/index.html
@@ -3,23 +3,27 @@
 
 {% block content %}
 {{block.super}}
-<div class="row">
+<div class="row" style="margin-top: 2em;">
+    <!--<div class="col-md-4 ml-3" style="width:30rem; display: inline;">-->
     {% for one in images %}
-        <div class="col-md-4 ml-3" style="width:12rem;">
-            <img class="card-img-top" style="height: 20rem;" src="{{one.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h5 class="card-title">{{one.Name}}</h5>
+        <ul style="margin-left: 6.5em;">
+            <li style="display:inline;">
+                <a href="/pic/{{one.id}}"><img class="card-img-top" style="height: 25rem; width:30rem;" src="{{one.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal"></a>
+                <div class="card-body">
+                    <div class="row ">
+                        <div class="col-md-6">
+                            <h5 class="card-title">Name: {{one.Name}}</h5>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="card-title">Category:{{one.category}}</h5>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <h5 class="card-title">{{one.category}}</h5>
-                    </div>
+                    <p class="card-text">{{one.Description}}</p>
                 </div>
-                <p class="card-text">{{one.Description}}</p>
-            </div>
-        </div>
+            </li>
+        </ul>
     {%endfor%}
+        <!--</div>-->
 </div>
 
 {% endblock %}
