--- a/myunsplash/templates/navbar.html
+++ b/myunsplash/templates/navbar.html
@@ -15,10 +15,11 @@
         </a>
 
         <div style="color:white;" class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          {% for locale in location %}
+
+              <a class="dropdown-item" href="/locations/{{locale.locale}}">{{locale.locale}}</a>
+
+          {% endfor %}
         </div>
       </li>
     </ul>
