--- a/myunsplash/templates/index.html
+++ b/myunsplash/templates/index.html
@@ -8,17 +8,15 @@
     {% for one in images %}
         <ul style="margin-left: 6.5em;">
             <li style="display:inline;">
+                <h5 class="card-header" style="width:30rem; text-align: center;">{{one.Name}}</h5>
                 <a href="/pic/{{one.id}}"><img class="card-img-top" style="height: 25rem; width:30rem;" src="{{one.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal"></a>
                 <div class="card-body">
                     <div class="row ">
-                        <div class="col-md-6">
-                            <h5 class="card-title">Name: {{one.Name}}</h5>
-                        </div>
-                        <div class="col-md-6">
-                            <h5 class="card-title">Category:{{one.category}}</h5>
+                        <div class="col-md-12">
+                            <h5 style="text-align: center;" class="card-title">Category:{{one.category}}</h5>
                         </div>
                     </div>
-                    <p class="card-text">{{one.Description}}</p>
+                    <p class="card-text" style="text-align: center;">{{one.Description}}</p>
                 </div>
             </li>
         </ul>
