--- a/myunsplash/templates/navbar.html
+++ b/myunsplash/templates/navbar.html
@@ -11,13 +11,13 @@
       </li>
       <li class="nav-item dropdown">
         <a  style="color:white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Locations
         </a>
 
         <div style="color:white;" class="dropdown-menu" aria-labelledby="navbarDropdown">
           {% for locale in location %}
 
-              <a class="dropdown-item" href="/locations/{{locale.locale}}">{{locale.locale}}</a>
+              <a class="dropdown-item" href="/location/{{locale.locale}}">{{locale.locale}}</a>
 
           {% endfor %}
         </div>
