--- a/myunsplash/templates/Image/search.html
+++ b/myunsplash/templates/Image/search.html
@@ -1,6 +1,7 @@
 {%extends 'base.html'%}
 
 {% block content %}
+<body style="background-color: #778899;">
 <div class="container">
 
   <div class="row">
@@ -12,26 +13,28 @@
 
   </div>
 
-  <div class="row">
-
   {% if images %}
-    {% for image in images %}
-      <div class="col-md-4 ml-3" style="width:12rem;">
-            <img class="card-img-top" style="height: 20rem;" src="{{image.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h5 class="card-title">{{image.Name}}</h5>
+    <div class="row" style="margin-top: 2em;">
+    <!--<div class="col-md-4 ml-3" style="width:30rem; display: inline;">-->
+    {% for one in images %}
+        <ul style="margin-left: 6.5em;">
+            <li style="display:inline;">
+                <h5 class="card-header" style="width:30rem; text-align: center; background-color: grey; color: white;">{{one.Name}}</h5>
+                <a href="/pic/{{one.id}}"><img class="card-img-top" style="height: 25rem; width:30rem;" src="{{one.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal"></a>
+                <div class="card-body" style="width:30rem;background-color: grey; color: white;">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5 style="text-align: center;" class="card-title">Category:{{one.category}}</h5>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <h5 class="card-title">{{image.category}}</h5>
-                    </div>
+                    <p class="card-text" style="text-align: center;">{{one.Description}}</p>
                 </div>
-                <p class="card-text">{{image.Description}}</p>
-            </div>
-        </div>
-    {% endfor %}
+            </li>
+        </ul>
+    {%endfor%}
+        <!--</div>-->
   {% endif %}
   </div>
 </div>
+</body>
 {% endblock %}
