--- a/myunsplash/templates/Image/single-image.html
+++ b/myunsplash/templates/Image/single-image.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<body style="background-color: #778899;">
 {% for image in images %}
 
 <a data-toggle="modal" data-target="#myModal{{image.id}}"><img src="{{image.image.url}}" style="margin-left: 200px;margin-top: 50px;" width="900" height="500"
@@ -18,12 +19,12 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
 
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="width:30rem;">
                 <p>
                     <h1>name:{{image.Name}}</h1>
                 </p>
                 <img src="{{image.image.url}}" width="450" height="400">
-                <p>
+                <p class="card-body">
                     <h3>Category:{{image.category}}</h3>
                     <h3>Description:{{image.Description}}</h3>
                 </p>
@@ -53,4 +54,5 @@
     }
 </script>
 {% endfor %}
+</body>
 {% endblock %}
