--- a/myunsplash/templates/index.html
+++ b/myunsplash/templates/index.html
@@ -3,16 +3,18 @@
 
 {% block content %}
 {{block.super}}
+<body style="background-color: #778899;">
 <div class="row" style="margin-top: 2em;">
     <!--<div class="col-md-4 ml-3" style="width:30rem; display: inline;">-->
     {% for one in images %}
         <ul style="margin-left: 6.5em;">
             <li style="display:inline;">
-                <h5 class="card-header" style="width:30rem; text-align: center;">{{one.Name}}</h5>
+                <h5 class="card-header" style="width:30rem; text-align: center; background-color: grey; color: white;">{{one.Name}}</h5>
                 <a href="/pic/{{one.id}}"><img class="card-img-top" style="height: 25rem; width:30rem;" src="{{one.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal"></a>
-                <div class="card-body">
-                    <div class="row ">
+                <div class="card-body" style="width:30rem;background-color: grey; color: white;">
+                    <div class="row">
                         <div class="col-md-12">
+                            <h5 style="text-align: center;" class="card-title">By:{{one.By}}</h5>
                             <h5 style="text-align: center;" class="card-title">Category:{{one.category}}</h5>
                         </div>
                     </div>
@@ -25,3 +27,4 @@
 </div>
 
 {% endblock %}
+</body>
