--- a/myunsplash/templates/location.html
+++ b/myunsplash/templates/location.html
@@ -2,15 +2,16 @@
 {%extends 'base.html'%}
 
 {% block content %}
+<body style="background-color: #778899;">
 {{block.super}}
  <div class="row">
     {% for one in image %}
-        <ul style="margin-left: 6.5em;">
-            <li style="display:inline;">
-                <h5 class="card-header" style="width:30rem; text-align: center;">{{one.Name}}</h5>
+        <ul style="margin-left: 6.5em; margin-top: 2em;">
+            <li style="display:inline; ">
+                <h5 class="card-header" style="width:30rem; text-align: center; background-color: grey; color: white;">{{one.Name}}</h5>
                 <a href="/pic/{{one.id}}"><img class="card-img-top" style="height: 25rem; width:30rem;" src="{{one.image.url}}" alt="card image cap" data-toggle="modal" data-target="#exampleModal"></a>
-                <div class="card-body">
-                    <div class="row ">
+                <div class="card-body" style="width:30rem; background-color: grey; color: white;">
+                    <div class="row" >
                         <div class="col-md-12">
                             <h5 style="text-align: center;" class="card-title">Category:{{one.category}}</h5>
                         </div>
@@ -22,3 +23,4 @@
     {%endfor%}
  </div>
 {% endblock %}
+</body>
