--- a/myunsplash/templates/navbar.html
+++ b/myunsplash/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'Home'%}" style="color:white;">BELLA VISTA</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -6,12 +6,9 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'Home'%}" style="color:white;">Home <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item dropdown">
         <a  style="color:white;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Locations
+          LOCATIONS
         </a>
 
         <div style="color:white;" class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -24,7 +21,7 @@
       </li>
     </ul>
     <form  style="color:white;" class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
-      <input class="form-control mr-sm-2" type="search" name="image" placeholder="Search Image" aria-label="Search">
+      <input class="form-control mr-sm-2" type="search" name="image" placeholder="Search By Category" aria-label="Search">
       <button style="color:white;" class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="glyphicon glyphicon-search"></i></button>
     </form>
   </div>
