--- a/myunsplash/templates/index.html
+++ b/myunsplash/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {{block.super}}
-<body style="background-color: #778899;">
+<body class="container-fluid" style="background-color: #778899;">
 <div class="row" style="margin-top: 2em;">
     <!--<div class="col-md-4 ml-3" style="width:30rem; display: inline;">-->
     {% for one in images %}
