--- a/myunsplash/templates/location.html
+++ b/myunsplash/templates/location.html
@@ -4,7 +4,7 @@
 {% block content %}
 <body style="background-color: #778899;">
 {{block.super}}
- <div class="row">
+ <div class="row container-fluid">
     {% for one in image %}
         <ul style="margin-left: 6.5em; margin-top: 2em;">
             <li style="display:inline; ">
