--- a/myunsplash/templates/Image/search.html
+++ b/myunsplash/templates/Image/search.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 
 {% block content %}
-<body style="background-color: #778899;">
+<body class="container-fluid" style="background-color: #778899;">
 <div class="container">
 
   <div class="row">
