--- a/myunsplash/templates/Image/single-image.html
+++ b/myunsplash/templates/Image/single-image.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<body style="background-color: #778899;">
+<body class="container-fluid" style="background-color: #778899; ">
 {% for image in images %}
 
 <a data-toggle="modal" data-target="#myModal{{image.id}}"><img src="{{image.image.url}}" style="margin-left: 200px;margin-top: 50px;" width="900" height="500"
